--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2",
     "prettier": "3.2.5"
   }
 }
